// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VInput.ts should apply attrs to root element 1`] = `
<div class="v-input theme--light"
     foo="bar"
>
  <div class="v-input__control">
    <div class="v-input__slot">
    </div>
    <div class="v-messages theme--light">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>
`;

exports[`VInput.ts should apply theme to label, counter, messages and icons 1`] = `
<div class="v-input theme--light">
  <div class="v-input__prepend-outer">
    <div class="v-input__icon v-input__icon--prepend">
      <span class="v-icon notranslate theme--light"
            aria-hidden="true"
      >
        <mdi class="v-icon__component theme--light"
             icon="prepend"
        >
        </mdi>
      </span>
    </div>
  </div>
  <div class="v-input__control">
    <div class="v-input__slot">
      <label class="v-label theme--light"
             for="input-50"
             aria-hidden="false"
             style="left: 0px; position: relative;"
      >
        foo
      </label>
    </div>
    <div class="v-messages theme--light">
      <div class="v-messages__wrapper">
        <div class="v-messages__message">
          bar
        </div>
      </div>
    </div>
  </div>
  <div class="v-input__append-outer">
    <div class="v-input__icon v-input__icon--append">
      <span class="v-icon notranslate theme--light"
            aria-hidden="true"
      >
        <mdi class="v-icon__component theme--light"
             icon="append"
        >
        </mdi>
      </span>
    </div>
  </div>
</div>
`;

exports[`VInput.ts should be in an error state 1`] = `
<div class="v-input v-input--has-state theme--light error--text">
  <div class="v-input__control">
    <div class="v-input__slot">
    </div>
    <div class="v-messages theme--light error--text">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>
`;

exports[`VInput.ts should be in an error state 2`] = `
<div class="v-input v-input--has-state theme--light error--text">
  <div class="v-input__control">
    <div class="v-input__slot">
    </div>
    <div class="v-messages theme--light error--text"
         role="alert"
    >
      <div class="v-messages__wrapper">
        <div class="v-messages__message message-transition-enter-from message-transition-enter-active">
          required
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VInput.ts should generate an icon and match snapshot 1`] = `
<div class="v-input theme--light">
  <div class="v-input__prepend-outer">
    <div class="v-input__icon v-input__icon--prepend">
      <span class="v-icon notranslate theme--light"
            aria-hidden="true"
      >
        <mdi class="v-icon__component theme--light"
             icon="list"
        >
        </mdi>
      </span>
    </div>
  </div>
  <div class="v-input__control">
    <div class="v-input__slot">
    </div>
    <div class="v-messages theme--light">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>
`;

exports[`VInput.ts should generate an icon and match snapshot 2`] = `
<div class="v-input theme--light">
  <div class="v-input__control">
    <div class="v-input__slot">
    </div>
    <div class="v-messages theme--light">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
  <div class="v-input__append-outer">
    <div class="v-input__icon v-input__icon--append">
      <span class="v-icon notranslate theme--light"
            aria-hidden="true"
      >
        <mdi class="v-icon__component theme--light"
             icon="list"
        >
        </mdi>
      </span>
    </div>
  </div>
</div>
`;

exports[`VInput.ts should generate append and prepend slots 1`] = `
<div class="v-input theme--light">
  <div class="v-input__control">
    <div class="v-input__slot">
    </div>
    <div class="v-messages theme--light">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
  <div class="v-input__append-outer">
    <div>
      append
    </div>
  </div>
</div>
`;

exports[`VInput.ts should generate append and prepend slots 2`] = `
<div class="v-input theme--light">
  <div class="v-input__prepend-outer">
    <div>
      prepend
    </div>
  </div>
  <div class="v-input__control">
    <div class="v-input__slot">
    </div>
    <div class="v-messages theme--light">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>
`;

exports[`VInput.ts should not generate input details 1`] = `
<div class="v-input v-input--hide-details theme--light">
  <div class="v-input__control">
    <div class="v-input__slot">
    </div>
  </div>
</div>
`;

exports[`VInput.ts should render a label 1`] = `
<div class="v-input theme--light">
  <div class="v-input__control">
    <div class="v-input__slot">
      <label class="v-label theme--light"
             for="input-45"
             aria-hidden="false"
             style="left: 0px; position: relative;"
      >
        foo
      </label>
    </div>
    <div class="v-messages theme--light">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>
`;
